service.yaml
apiVersion: v1
kind: Service
metadata:
  name: improved-broccoli
spec:
  type: NodePort
  selector:
    run: improved-broccoli
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30000
